--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "lint": "npm run lint:js"
+    "lint": "npm run lint:js",
+    "test": "jest"
+
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.5",
@@ -18,12 +20,14 @@
     "nuxt": "^2.14.12"
   },
   "devDependencies": {
+    "@nuxt/test-utils": "^0.1.2",
     "@nuxtjs/eslint-config": "^5.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "babel-eslint": "^10.1.0",
     "cypress": "^6.3.0",
     "eslint": "^7.18.0",
     "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-plugin-vue": "^7.5.0"
+    "eslint-plugin-vue": "^7.5.0",
+    "jest": "^26.6.3"
   }
 }
